--- a/1/requirements.txt
+++ b/1/requirements.txt
@@ -5,6 +5,6 @@ streamlit-echarts==0.4.0
 pandas==2.2.0
 beautifulsoup4==4.12.3
 requests==2.31.0
-plotly==5.10.0
-wordcloud==1.9.2
-matplotlib==3.6.2
+plotly
+wordcloud
+matplotlib
