--- a/1/requirements.txt
+++ b/1/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.31.1
-jieba==0.42.1
-pyecharts==2.0.4
-streamlit-echarts==0.4.0
-pandas==2.2.0
-beautifulsoup4==4.12.3
-requests==2.31.0
+streamlit
+jieba
+pyecharts
+streamlit-echarts
+pandas
+beautifulsoup4
+requests
 plotly
 wordcloud
 matplotlib
