--- a/1/requirements.txt
+++ b/1/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
+requests
+beautifulsoup4
 jieba
 pyecharts
-streamlit-echarts
-pandas
-beautifulsoup4
-requests
-plotly
-wordcloud
 matplotlib
+seaborn
+plotly
